with logger function decorator fn

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,8 @@
     "sourceMap": true,
     "declarationMap": true,
 
+    "jsx": "preserve",
+
     "outDir": "dist"
   },
   "include": ["src/**/*"],
