--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
+    "prettier": "^3.2.5",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
-  },
-  "dependencies": {}
+  }
 }
